@@ -8,9 +8,9 @@ if "%JAVA%" =="" (
 )
 
 if "%JAVA_OPTIONS%" =="" (
-  @set JAVA_OPTIONS=-server -showversion -XX:+AggressiveOpts -Xmx2g -Xms2g -XX:+HeapDumpOnOutOfMemoryError -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -XX:CMSInitiatingOccupancyFraction=75 -XX:+UseCMSInitiatingOccupancyOnly -XX:+ScavengeBeforeFullGC -XX:+CMSScavengeBeforeRemark -XX:+DisableExplicitGC
+  @set JAVA_OPTIONS=-server -showversion -Xmx2g -Xms2g -XX:+HeapDumpOnOutOfMemoryError -XX:+UseG1GC -XX:InitiatingHeapOccupancyPercent=75 -XX:-G1UseAdaptiveIHOP -XX:+ScavengeBeforeFullGC -XX:+DisableExplicitGC
 )
-@set JAVA_OPTIONS=%JAVA_OPTIONS% -Dlog4j.configurationFile=log4j2.xml
+@set JAVA_OPTIONS=%JAVA_OPTIONS% -Dlog4j.configurationFile=log4j2.xml --illegal-access=warn
 
 cd "%~dp0"
 "%JAVA%" %JAVA_OPTIONS% -cp config/;alien4cloud-premium-ui-${project.version}.war org.springframework.boot.loader.WarLauncher %@
